fixing z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ header img{
     height: 24px;
 }
 
-
 footer{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -68,7 +67,7 @@ footer{
         border: 0;
         cursor: pointer;
         transition: scale .3s ease;
-        z-index: 3;
+        
     }
 
     & :hover{
@@ -144,4 +143,8 @@ footer{
 
 
 
+}
+
+footer button{
+    z-index: 10;
 }
